style: fix text alignment issue related to line height

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -9,7 +9,7 @@
 }
 
 body {
-    line-height: 1.5;
+    line-height: 1;
     -webkit-font-smoothing: antialiased;
 }
 
